package MeetingSystem;

// 观察者接口
public interface Observer {
    void update(String status);
}
