@startuml
interface Observer.Observer {
~ void update(float,float,float)
}

class Observer.WeatherData {
- ArrayList<Observer> observers
+ void registerObserver(Observer)
+ void removeObserver(Observer)
+ void notifyObservers(float,float,float)
}


interface Observer.Subject {
~ void registerObserver(Observer)
~ void removeObserver(Observer)
~ void notifyObservers(float,float,float)
}

class Observer.PhoneDisplay {
+ void update(float,float,float)
}

class Observer.TVDisplay {
+ void update(float,float,float)
}

class Observer.Client {
+ {static} void main(String[])
}



Observer.Subject <|.. Observer.WeatherData
Observer.Observer <|.. Observer.PhoneDisplay
Observer.Observer <|.. Observer.TVDisplay
@enduml